--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,6 @@ set(CMAKE_CXX_STANDARD 98)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 
-set(SOURCE_FILES main.cpp Server.cpp Server.h Command.h CommandsManager.cpp CommandsManager.h GameRoom.cpp GameRoom.h StartCommand.cpp StartCommand.h CloseCommand.cpp CloseCommand.h ListOfGamesCommand.cpp ListOfGamesCommand.h JoinCommand.cpp JoinCommand.h PlayCommand.cpp PlayCommand.h)
+set(SOURCE_FILES main.cpp Server.cpp Server.h Command.h CommandsManager.cpp CommandsManager.h GameRoom.cpp GameRoom.h StartCommand.cpp StartCommand.h CloseCommand.cpp CloseCommand.h ListOfGamesCommand.cpp ListOfGamesCommand.h JoinCommand.cpp JoinCommand.h PlayCommand.cpp PlayCommand.h GameRoomsController.cpp GameRoomsController.h)
 add_executable(ReversiServer ${SOURCE_FILES})
 target_link_libraries(${PROJECT_NAME} pthread)
